Update and rename projects.html to outreach.html

--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Projects"
-permalink: /projects/
+title: "Outreach"
+permalink: /outreach/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.projects %}
+{% for post in site.outreach %}
   {% include archive-single.html %}
 {% endfor %}
 
